--- a/01_abtest_ecommerce_2022/notebooks/03_report.html
+++ b/01_abtest_ecommerce_2022/notebooks/03_report.html
@@ -7510,7 +7510,7 @@ a.anchor-link {
 <!-- End of mermaid configuration --></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=cf474ffc-f575-4e7b-9a01-8a1728320165">
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=8f1aae79-7de0-47a2-b5e8-fb10743d5737">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -7518,10 +7518,9 @@ a.anchor-link {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 id="%F0%9F%93%98-Final-Report:-A/B-Test-Analysis">📘 Final Report: A/B Test Analysis<a class="anchor-link" href="#%F0%9F%93%98-Final-Report:-A/B-Test-Analysis">¶</a></h1><hr/>
 <p>🧾 Supplementary Document for Master's Application</p>
-<p>This report is submitted as a supplementary document to support my early application for the Master's program.</p>
-<p>Although I have experience in applied machine learning using <code>scikit-learn</code>, I wanted to strengthen my foundation in classical statistics through this project.<br/>
-By conducting an end-to-end A/B test, I aimed to better understand the statistical thinking behind real-world experimentation — including hypothesis testing, confidence intervals, and effect size analysis.</p>
-<p>This project reflects my initiative to grow beyond libraries and deepen my reasoning skills with data.</p>
+<p>I submitted this report to accompany my early application, leveraging the early deadline to demonstrate both my preparedness and sustained commitment to growth in data science.</p>
+<p>While I’ve worked with applied machine learning using tools like scikit-learn, I took this opportunity to revisit core concepts in A/B testing and statistics. The project helped me solidify essential topics like hypothesis testing, confidence intervals, and practical experiment design—skills that are highly relevant in real-world data science work.</p>
+<p>This project reflects my ongoing commitment to developing both the technical and analytical mindset needed to succeed in a professional data science environment.</p>
 <blockquote>
 <p>💻 Code available on <a href="https://github.com/Junemo-hub/ab-test-experiment-design/tree/main/01_abtest_ecommerce_2022">GitHub</a></p>
 </blockquote>
